# efflux-desktop

./: .gitignore  README.md  build.spec  default_setting.py  main.py  nohup.out  pyproject.toml  streamable_client.py  streamable_server.py  system_prompt.md  tag_list.yaml
.demo/: claude_demo.py  gemini_aihubmix.py  openai_base64.py  openai_chat.py  openai_file_demo.py  openai_file_id.py  openai_img_demo.py
adapter/agent/: agent.json  agent_adapter.py  agent_bak.json  agent_bak1.json
adapter/cache/: cache_adapter.py  cache_util.py  multi_process_cache_adapter.py
adapter/conversation/: conversation_adapter.py
adapter/event/: event_adapter.py
adapter/file/: chroma_db_adapter.py  file_adapter.py  file_vector_adapter.py
adapter/mcp/: mcp_server_adapter.py  mcp_servers.json  server_loader.py  test.py  tools_adapter.py
adapter/model_sdk/: __init__.py  client.py  client_manager.py  embedding_adapter.py
adapter/plan/: plan_adapter.py
adapter/setting/: artifacts_prompt.md  user_setting_adapter.py
adapter/task/: task_manager.py
adapter/tools/: tools_manager.py
adapter/vector_model/: vector_model_adapter.py
application/domain/: agent.py  conversation.py  file.py  mcp_server.py  plan.py  plans.py  ppt.py  vector_model.py
application/service/: agent_service.py  conversation_service.py  default_agent_service.py  file_processing_service.py  file_service.py  generator_service.py  mcp_service.py  plan_service.py  ppt_service.py  teams_service.py  test_service.py  user_settings_service.py  vector_model_service.py  ws_manager.py
chroma_files/: chroma.sqlite3
(+147 files in other folders)
